modified new html's

--- a/accessories.html
+++ b/accessories.html
@@ -34,7 +34,7 @@
                                 <ul id="Products" class="dropdown-content">
                                     <li>
                                         <a href="#products">Promos</a>
-                                        <a href="laptop.html">Laptops</a>
+                                        <a href="index.html">Laptops</a>
                                         <a href="smartPhones.html">Mobiles</a>
                                         <a href="accessories.html">Accessories</a>
                                     </li>
@@ -70,7 +70,7 @@
             </div>
             <div class="collapsible-body teal">
                 <ul>
-                    <li><a href="laptop.html">Laptops</a></li>
+                    <li><a href="index.html">Laptops</a></li>
                     <li><a href="smartPhones.html">Mobiles</a></li>
                     <li><a href="#head">Accessories</a></li>
                 </ul>
