--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                 <ul id="Products" class="dropdown-content">
                                     <li>
                                         <a href="#products">Promos</a>
-                                        <a href="#laptops">Laptops</a>
+                                        <a href="index.html">Laptops</a>
                                         <a href="smartPhones.html">Mobiles</a>
                                         <a href="accessories.html">Accessories</a>
                                     </li>
